--- a/templates/budgets/budgetitem_edit.html
+++ b/templates/budgets/budgetitem_edit.html
@@ -2,9 +2,9 @@
 
 {% block body %}
 
-<form method="POST">
+<form class="form-grid" method="POST">
     {% csrf_token %}
-    {{form.as_p}}
+    {{form}}
     <button type="submit">Edit</button>
 </form>
 
