--- a/templates/purchases/purchase_edit.html
+++ b/templates/purchases/purchase_edit.html
@@ -2,9 +2,9 @@
 
 {% block body %}
 
-<form method="POST">
+<form class="form-grid" method="POST">
     {% csrf_token %}
-    {{form.as_p}}
+    {{form}}
     <input type="hidden" name="next" value="{{request.GET.next}}">
     <button type="submit">Save</button>
 </form>
