Styling added to login and signup

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,7 +7,7 @@
 
 
 {% block body %}
-    <form class="login" method="POST" action="{% url 'account_login' %}">
+    <form class="login form-grid" method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
