--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -7,7 +7,7 @@
 
 
 {% block body %}
-    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+    <form class="signup form-grid" id="signup_form" method="post" action="{% url 'account_signup' %}">
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
