--- a/templates/budgets/monthly_budget_detail.html
+++ b/templates/budgets/monthly_budget_detail.html
@@ -65,7 +65,7 @@
             <div>${{budget_item.spent}}</div>
             <div>${{budget_item.diff}}</div>
             <div><a href='{% url "budgetitem_edit" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a></div>
-            <div></div>
+            <div><a href='{% url "budget_item_delete" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a></div>
             <div></div>
             <div></div>
 
@@ -102,7 +102,7 @@
         <div>${{savings_item.saved}}</div>
         <div>${{savings_item.diff}}</div>
         <div><a href='{% url "budgetitem_edit" year=monthly_budget.date.year month=monthly_budget.date.month category=savings_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/edit-pencil.svg' %}" width="17px"></a></div>
-        <div></div>
+        <div><a href='{% url "budget_item_delete" year=monthly_budget.date.year month=monthly_budget.date.month category=savings_item.category.name %}'><img class="list-nav-icon" src="{% static 'images/trash.svg' %}" width="17px"></a></div>
         <div></div>
         <div></div>
         {% endfor %}
